# welder

./: Cargo.toml  README.md  example.toml
src/: cli.yml  main.rs
src/commands/: check.rs  mod.rs  version.rs
src/conf/: mod.rs  role.rs
src/conf/tests/: mod.rs  role1.toml  role1.yaml  task1.yaml
src/module/: debug.rs  mod.rs  var.rs
src/tests/: types.rs
src/types/: mod.rs  task_identifier.rs
