[package]
name = "welder"
version = "0.1.0"
authors = ["Raphael Peters <rappet@rappet.de>"]
edition = "2018"
description = "An infrastructure provisioning and automation tool."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serde_json = "1.0"
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
